[package]
name = "c_compiler"
version = "0.1.0"
authors = ["Lily McCabe <lily@lilymccabe.ca>"]
edition = "2021"
readme = "README.md"



[features]
unicode = ["regex/unicode"]
parallel = ["dep:rayon"]

[dependencies]
log = "0.4.20"
once_cell = "1.18.0"
rayon = {version = "1.8.0", optional = true}
regex = {version = "1.10.2", default-features = false, features = ["perf", "perf-dfa-full", "std"]}
